# steam2-extract

./: CMakeLists.txt
include/: gcfstructs.hpp
src/: main.cpp
